<resources>
    <string name="app_name">Mi voto</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="logo_registraduria">logo_registraduria</string>
    <string name="registro">Registro</string>

    <string name="UseWith">Use with</string>
    <string name="StartScanning">Start scanning</string>
    <string name="password">Password</string>
    <string name="scanear_cedula">scanear cedula</string>
    <string name="apellidos">Apellidos</string>
    <string name="cedula">Cedula</string>
    <string name="nombres">Nombres</string>
    <string name="f_de_nacimiento">F de nacimiento</string>
    <string name="g_s_rh">G.S RH</string>
    <string name="registrar">Registrar</string>
    <string name="sexo">Sexo</string>
    <string name="result_failed_why">Fallo en el scan</string>
</resources>
